fix: added validation and dashboard api integration (#71)
* fix: form step causing errors

* feat(web): added task design in dashboard

* feat: added validation on second step

* fix: made sidebar fixed

* feat: added debounce functions

* feat: added context and loaders

* feat: fixed supertokens auth midlewares

* feat: more swagger

* feat: added session id

* validation of form

* fix: redicrection url

* feat: added phonenumber access to db

* feat: wizard form

* feat: addded search modal ui

* feat: cards in dashboard

* fix: form step causing errors

* feat(web): added task design in dashboard

* feat: added validation on second step

* fix: made sidebar fixed

* feat: added debounce functions

* feat: added context and loaders

* feat: router

* feat: more swagger

* feat: added session id

* validation of form

* fix: redicrection url

* feat: added phonenumber access to db

* feat: wizard form

* feat: addded search modal ui

* feat: added debounce

* feat: cards in dashboard

* feat: membersltable

* feat: added users

* feat: added users

* feat: memberslist

* fix: inavalid status codes

---------
