# controller/officials.controller.go
@@ -7,13 +7,22 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/sreehari2003/kseb/models"
+	"github.com/supertokens/supertokens-golang/recipe/passwordless"
+	"github.com/supertokens/supertokens-golang/recipe/session"
 )
 
+// Create User
+// @Summary Create KSEB Employee
+// @Param reqBody body models.Officials true "Example Request Body"
+// @Accept  json
+// @Produce  json
+// @Router /officials [post]
 func (h Handler) CreateOffical(c *gin.Context) {
 	//clear previous error if any
 	errList := map[string]string{}
 	var officials = models.Officials{}
 	body, err := io.ReadAll(c.Request.Body)
+
 	// if error in marsheling body
 	if err != nil {
 		errList["Invalid_body"] = "invalid data provided"
@@ -36,6 +45,7 @@ func (h Handler) CreateOffical(c *gin.Context) {
 	}
 	// validating the user data based on our schema
 	errorMessages := officials.Validate()
+
 	if len(errorMessages) > 0 {
 		errList = errorMessages
 		c.JSON(http.StatusUnprocessableEntity, gin.H{
@@ -45,6 +55,13 @@ func (h Handler) CreateOffical(c *gin.Context) {
 		})
 		return
 	}
+
+	// Fetching the session object and reading the userID
+	sessionContainer := session.GetSessionFromRequestContext(c.Request.Context())
+	userId := sessionContainer.GetUserID()
+	userInfo, err := passwordless.GetUserByID(userId)
+	officials.AuthId = userId
+	officials.Phone = *userInfo.PhoneNumber
 
 	// creating data in db
 	// if error send error to client
@@ -60,7 +77,7 @@ func (h Handler) CreateOffical(c *gin.Context) {
 	// sending succes message with data to client
 	c.JSON(http.StatusCreated, gin.H{
 		"status":   http.StatusCreated,
-		"response": "Issue created successfully",
+		"response": "User created successfully",
 		"ok":       true,
 		"data":     officials,
 	})
@@ -87,19 +104,27 @@ func (h Handler) GetAllOfficials(c *gin.Context) {
 	})
 }
 
-func (h Handler) GetOfficialsByID(c *gin.Context) {
+// Find User
+// @Summary Check whether user exist in database or not by supertokens primary key
+// @Accept  json
+// @Produce  json
+// @Router /officials [get]
+func (h Handler) GetOfficial(c *gin.Context) {
 	var Officials []models.Officials
-	id := c.Param("id")
-	if result := h.DB.Find(&Officials, id); result.Error != nil {
-		c.JSON(http.StatusUnprocessableEntity, gin.H{
-			"status": http.StatusInternalServerError,
-			"error":  "couldn't find the data",
+	// Fetching the session object and reading the userID
+	sessionContainer := session.GetSessionFromRequestContext(c.Request.Context())
+	userId := sessionContainer.GetUserID()
+	if result := h.DB.Where("auth_id = ?", userId).First(&Officials); result.Error != nil {
+		c.JSON(http.StatusNotFound, gin.H{
+			"status": http.StatusNotFound,
+			"error":  "couldn't find the user",
 			"ok":     false,
 		})
+		return
 	}
 
-	c.JSON(http.StatusCreated, gin.H{
-		"status":   http.StatusCreated,
+	c.JSON(http.StatusAccepted, gin.H{
+		"status":   http.StatusAccepted,
 		"response": "Data read successfully",
 		"ok":       true,
 		"data":     Officials,
@@ -113,9 +138,9 @@ func (h Handler) SearchOfficialByName(c *gin.Context) {
 
 	var officials []models.Officials
 	if result := h.DB.Where("name LIKE ?", "%"+name+"%").Find(&officials); result.Error != nil {
-		c.JSON(http.StatusUnprocessableEntity, gin.H{
-			"status": http.StatusInternalServerError,
-			"error":  "couldn't search for users",
+		c.JSON(http.StatusNotFound, gin.H{
+			"status": http.StatusNotFound,
+			"error":  "couldn't find the user",
 			"ok":     false,
 		})
 		return
@@ -123,7 +148,7 @@ func (h Handler) SearchOfficialByName(c *gin.Context) {
 
 	c.JSON(http.StatusOK, gin.H{
 		"status":   http.StatusOK,
-		"response": "Users searched successfully",
+		"response": "Users found successfully",
 		"ok":       true,
 		"data":     officials,
 	})
