# models/officials.go
@@ -20,11 +20,14 @@ const (
 // swagger:model Officials
 type Officials struct {
 	gorm.Model
-	Id    uint   `gorm:"primary_key;auto_increment" json:"id"`
-	Name  string `gorm:"size:255;not null" json:"name"`
-	Role  ROLE   `sql:"type:ENUM('SE', 'AE', 'OV')" gorm:"column:role"`
-	Phone int    `gorm:"not null" json:"phone"`
-	Forms []Form `gorm:"foreignkey:OfficialID"`
+	Id         uint   `gorm:"primary_key;auto_increment" json:"id"`
+	AuthId     string `gorm:"unique" json:"auth_id"`
+	Name       string `gorm:"size:255;not null" json:"name"`
+	Role       ROLE   `sql:"type:ENUM('SE', 'AE', 'OV')" gorm:"column:role"`
+	Phone      string `gorm:"not null" json:"phone"`
+	Forms      []Form `gorm:"foreignkey:OfficialID"`
+	IsVerified bool   `gorm:"default:false" json:"is_Verifed"`
+	Location   string `gorm:"not null" json:"location"`
 }
 
 // custom vaidation for body data from backend
@@ -32,8 +35,6 @@ type Officials struct {
 func (i *Officials) Validate() map[string]string {
 	var err error
 	// used this to validate the phon number is null or not
-	var checkNum *int
-	checkNum = &i.Phone
 
 	var errormessage = make(map[string]string)
 	if i.Name == "" {
@@ -43,10 +44,6 @@ func (i *Officials) Validate() map[string]string {
 	if i.Role == "" {
 		err = errors.New("Required Role")
 		errormessage["Required_Role"] = err.Error()
-	}
-	if checkNum == nil {
-		err = errors.New("Required phone")
-		errormessage["Required_phone"] = err.Error()
 	}
 	return errormessage
 }
